# FEUP-CAL

./: CMakeLists.txt  Cliente.cpp  Cliente.h  Empresa.cpp  Empresa.h  Encomenda.cpp  Encomenda.h  Estafeta.cpp  Estafeta.h  Graph.h  Hora.cpp  Hora.h  Menu.cpp  Menu.h  Pessoa.cpp  Pessoa.h  Posicao.cpp  Posicao.h  Prato.cpp  Prato.h  Restaurante.cpp  Restaurante.h  Transporte.cpp  Transporte.h  encomendas.txt  main.cpp  utils.cpp  utils.h
Entrega/: README.txt
Relatório/: .~lock.Relatório.odt#  Relatorio.odt  Relatorio2.odt  Relatório.odt
csv/: resultados_dfs.csv  resultados_dijkstra.csv
ficheiros_graph/grafo_aula_conectividade/: edges.txt  nodes.txt
ficheiros_texto/: clientes.txt  encomendas.txt  estafetas.txt  pratos.txt  restaurantes.txt  transportes.txt
